RESOLVED FIXED267729
[iOS] -[WKContentView hasText] is incorrect when initially focusing an editable element
https://bugs.webkit.org/show_bug.cgi?id=267729
Summary [iOS] -[WKContentView hasText] is incorrect when initially focusing an editab...
Wenson Hsieh
Reported 2024-01-18 14:05:36 PST
Attachments
Wenson Hsieh
Comment 1 2024-01-18 14:57:03 PST
EWS
Comment 2 2024-01-18 22:22:43 PST
Committed 273211@main (1cb03ba5c4bb): <https://commits.webkit.org/273211@main> Reviewed commits have been landed. Closing PR #22939 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.