Source/WebKit/WebProcess/WebPage/ios/WebPageIOS.mm
@@ -3629,6 +3629,7 @@ std::optional<FocusedElementInformation> WebPage::focusedElementInformation()
         information.elementType = InputType::TextArea;
         information.isReadOnly = element->isReadOnly();
         information.value = element->value();
+        information.hasPlainText = !information.value.isEmpty();
         information.autofillFieldName = WebCore::toAutofillFieldName(element->autofillData().fieldName);
         information.nonAutofillCredentialType = element->autofillData().nonAutofillCredentialType;
         information.placeholder = element->attributeWithoutSynchronization(HTMLNames::placeholderAttr);
@@ -3698,6 +3699,7 @@ std::optional<FocusedElementInformation> WebPage::focusedElementInformation()
         information.enterKeyHint = element->canonicalEnterKeyHint();
         information.isReadOnly = element->isReadOnly();
         information.value = element->value();
+        information.hasPlainText = !information.value.isEmpty();
         information.valueAsNumber = element->valueAsNumber();
         information.autofillFieldName = WebCore::toAutofillFieldName(element->autofillData().fieldName);
         information.nonAutofillCredentialType = element->autofillData().nonAutofillCredentialType;
@@ -3714,6 +3716,7 @@ std::optional<FocusedElementInformation> WebPage::focusedElementInformation()
             information.autocapitalizeType = WebCore::AutocapitalizeType::Default;
         }
         information.isReadOnly = false;
+        information.hasPlainText = hasAnyPlainText(makeRangeSelectingNodeContents(*focusedElement));
     }
 
     if (focusedElement->document().quirks().shouldSuppressAutocorrectionAndAutocapitalizationInHiddenEditableAreas() && isTransparentOrFullyClipped(*focusedElement)) {
